# wallpad

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/core/: errors.py  orchestrator.py  provider_base.py  static_pages.py
app/providers/: calendar.py  fx.py  home_assistant.py  mail.py  weather.py
app/routers/: actions.py  config_editor.py  dashboard.py  health.py
app/schemas/: actions.py  config_editor.py  dashboard.py  dashboard_config.py
app/services/: cache.py  dashboard_config.py  home_assistant.py
app/static/: app.js  config-editor.js  config.html  index.html  styles.css
